fixed MOZ in text align

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,8 +6,12 @@ h1 {
 
 h2 {
 	font-size: 40px;
-	text-align: -moz-center;
-	text-shadow: 2px 4px 2px rgb(255, 137, 0);
+	text-align: center;
+	text-shadow: 2px 4px 2px rgb(255, 134, 44);
+}
+
+img {
+	align-content: space-evenly;
 }
 
 
